--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_REST_API_ENDPOINT=http://localhost:3000/api
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
-# NEXT_PUBLIC_BACKEND_URL=https://api.morskoi-koktail.ru/api
-NEXT_PUBLIC_BACKEND_URL=https://api.cryptocoin.wiki/api
+NEXT_PUBLIC_BACKEND_URL=https://api.morskoi-koktail.ru/api
+# NEXT_PUBLIC_BACKEND_URL=https://api.cryptocoin.wiki/api
 # NEXT_PUBLIC_BACKEND_URL=https://www.toplight.pro/api
 # NEXT_PUBLIC_YANDEX_URL=https://suggest-maps.yandex.ru/v1/suggest?apikey=559e1f9b-e496-40c2-9740-90d74cacebed
 # NEXT_PUBLIC_STRIPE_PUBLIC_KEY= Put your stripe public key here
