--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "gsap": "^3.12.4",
     "i18next": "^23.6.0",
