--- a/.env.local
+++ b/.env.local
@@ -3,8 +3,7 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_BACKEND_URL=https://api.morskoi-koktail.ru/api
 # NEXT_PUBLIC_BACKEND_URL=https://api.cryptocoin.wiki/api
 # NEXT_PUBLIC_BACKEND_URL=https://www.toplight.pro/api
-# NEXT_PUBLIC_YANDEX_API_KEY=559e1f9b-e496-40c2-9740-90d74cacebed
-# NEXT_PUBLIC_YANDEX_URL=https://suggest-maps.yandex.ru/v1/suggest?apikey=559e1f9b-e496-40c2-9740-90d74cacebed
+NEXT_PUBLIC_YANDEX_API_KEYS=559e1f9b-e496-40c2-9740-90d74cacebed
+NEXT_PUBLIC_YANDEX_URLS=https://suggest-maps.yandex.ru/v1/suggest?apikey=559e1f9b-e496-40c2-9740-90d74cacebed
 NEXT_PUBLIC_YANDEX_API_KEY=2d4fdc10-d35f-47a4-8484-9119412d96f1
 NEXT_PUBLIC_YANDEX_URL=https://geocode-maps.yandex.ru/1.x/?apikey=2d4fdc10-d35f-47a4-8484-9119412d96f1
-# NEXT_PUBLIC_YANDEX_URL=https://suggest-maps.yandex.ru/v1/suggest?apikey=559e1f9b-e496-40c2-9740-90d74cacebed
