--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rc-slider": "^10.1.0",
     "rc-table": "^7.34.4",
     "react": "^18",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.9.1",
     "react-content-loader": "^6.2.0",
     "react-copy-to-clipboard": "^5.1.0",
