--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-autosuggest": "^10.1.11",
     "@types/react-bootstrap": "^0.32.35",
     "@types/react-copy-to-clipboard": "^5.0.5",
     "@types/react-dom": "^18",
